konst/tests/misc_tests/parser_ui_tests/custom_errors_err.stderr
error[E0080]: evaluation of constant value failed
 --> tests/misc_tests/parser_ui_tests/custom_errors_err.rs:3:5
  |
3 |     konst::unwrap_ctx!(Err(parser.into_other_error(&"hello world!")))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'error from the start at the 3 byte offset: hello world!', $DIR/tests/misc_tests/parser_ui_tests/custom_errors_err.rs:3:5
  |
  = note: this error originates in the macro `konst::unwrap_ctx` (in Nightly builds, run with -Z macro-backtrace for more info)
