konst/tests/misc_tests/parser_ui_tests/custom_errors_err.rs
const _: usize = {
    let parser = konst::Parser::new("foo bar baz").skip(3);
    konst::unwrap_ctx!(Err(parser.into_other_error(&"hello world!")))
};


fn main(){}